# Face-ID-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_and_run.sh  compile_run.sh  fbr
cmakeBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  main
examples/: openvino  openvino.cpp  yolo  yolo.cpp
include/: detectors.hpp  image_tools.hpp  recognizers.hpp
include/detectors/: Interface.hpp  common.hpp
include/detectors/yolo/: yolov7face.h
include/recognizers/: Interface.hpp
include/utilities/: image.hpp
include/utilities/image/: image.hpp
src/: image_tools.cpp  main.cpp
src/detectors/: yolo.cpp
src/detectors/yolo/: yolov7face.cpp
src/recognizers/: facenet.cpp
src/utilities/: image.cpp
src/utilities/image/: image.cpp
test/: Makefile
