cmake_minimum_required(VERSION 3.21)
project(main)
set(IE_SAMPLE_NAME main)
set(CMAKE_CXX_STANDARD 17)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(.)
include_directories(include)
find_package(InferenceEngine 2.1 REQUIRED)
add_executable(main src/main.cpp  src/utilities/image.cpp)
target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries( main ${InferenceEngine_LIBRARIES} )
set(CMAKE_BUILD_TYPE RelWithDebInfo )
